--- a/src/layouts/main-footer.html
+++ b/src/layouts/main-footer.html
@@ -35,7 +35,7 @@
                     <h4 class="footer-block__title mb-4">Newsletter subscription</h4>
                     <form action="" class="footer-block__form d-flex">
                         <input class="flex-grow-1 me-2" type="text" placeholder="Enter your email">
-                        <button class="mp-btn mp-btn--footer flex-shrink-0">Submit</button>
+                        <button disabled class="mp-btn mp-btn--footer flex-shrink-0">Submit</button>
                     </form>
                 </div>
             </div>
