--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     font-weight: 700;
-    padding: 0 3rem;
+    padding: 0 3rem 3px;
     font-size: 20px;
     background-color: $primary-pink;
     color: $white;
