--- a/src/components/main-menu.html
+++ b/src/components/main-menu.html
@@ -11,16 +11,17 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <div class="menu-bottom-block mb-4 mb-md-0">
-                    <h4 class="mb-3 mb-md-4">Contact info</h4>
-                    <p class="mb-2 mb-md-3">+94 772 985 290</p>
-                    <p>support@mintpay.lk</p>
+                    <h4 class="mb-3 mb-md-4">Contact number</h4>
+                    <p>+94 772 985 290</p>
+                    
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="menu-bottom-block mb-4 mb-md-0">
-                    <h4 class="mb-3 mb-md-4">Our location</h4>
-                    <p class="mb-2 mb-md-3">31A, Mallika Lane, Colombo 00600</p>
+                    <h4 class="mb-3 mb-md-4">Email</h4>
+                    <p>support@mintpay.lk</p>
+                    <!--<p class="mb-2 mb-md-3">31A, Mallika Lane, Colombo 00600</p>-->
                 </div>
             </div>
 
