--- a/src/layouts/main-footer.html
+++ b/src/layouts/main-footer.html
@@ -3,16 +3,7 @@
         <div class="row">
             <div class="col-12 col-lg-6 col-xl-3">
                 <div class="footer-block">
-                    <h4 class="footer-block__title mb-4">Contact details</h4>
-                    <p class="footer-block__text mb-3"><a href="mailto:support@mintpay.lk">support@mintpay.lk</a>
-                    </p>
-                    <p class="footer-block__text mb-3">+94 772 985 290</p>
-                    <address class="footer-block__text">31A, Mallika Lane, Colombo 00600</address>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-3">
-                <div class="footer-block">
-                    <h4 class="footer-block__title mb-4">Useful links</h4>
+                    <h4 class="footer-block__title mb-4">Shoppers</h4>
                     <ul class="footer-block__nav">
                         <li class="footer-block__text mb-3"><a href="support.html">Support</a></li>
                         <li class="footer-block__text mb-3"><a href="https://app.mintpay.lk/terms/">Terms &amp; conditions</a></li>
@@ -20,23 +11,30 @@
                     </ul>
                 </div>
             </div>
+            <div class="col-12 col-lg-6 col-xl-3">
+                <div class="footer-block">
+                    <h4 class="footer-block__title mb-4">Business</h4>
+                    <ul class="footer-block__nav">
+                        <li class="footer-block__text mb-3"><a href="partner-with-us.html">Work with us</a></li>
+                        <li class="footer-block__text mb-3"><a href="https://app.mintpay.lk/merchant/login">Merchant portal</a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="col-12 col-lg-6 col-xl-3 mt-4 mt-xl-0">
                 <div class="footer-block">
-                    <h4 class="footer-block__title mb-4">Banking Partners</h4>
+                    <h4 class="footer-block__title mb-4">About us</h4>
+                    <p class="footer-block__text mb-3"><a href="https://www.linkedin.com/company/algoredge/?viewAsMember=true">Company</a></p>
+                    <p class="footer-block__text mb-3"><a href="https://www.linkedin.com/company/algoredge/people/?viewAsMember=true">People</a></p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 col-xl-3 mt-4 mt-xl-0">
+                <div class="footer-block">
+                    <h4 class="footer-block__title mb-4">Partners</h4>
                     <div
                         class="footer-block__logos d-flex flex-wrap justify-content-center justify-content-lg-start">
                         <img class="me-4" src="assets/img/mastercard-logo.png" alt="">
                         <img class="" src="assets/img/seylan-logo.png" alt="">
                     </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-3 mt-4 mt-xl-0">
-                <div class="footer-block">
-                    <h4 class="footer-block__title mb-4">Newsletter subscription</h4>
-                    <form action="" class="footer-block__form d-flex">
-                        <input class="flex-grow-1 me-2" type="text" placeholder="Enter your email">
-                        <button disabled class="mp-btn mp-btn--footer flex-shrink-0">Submit</button>
-                    </form>
                 </div>
             </div>
         </div>
