--- a/src/assets/scss/pages/_stores.scss
+++ b/src/assets/scss/pages/_stores.scss
@@ -204,6 +204,7 @@
                 height: 100%;
                 top: 0;
                 left: 0;
+                border-radius: 10px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -223,24 +224,28 @@
                         transition: .35s;
 
                         &.rectangular-logo {
-                            width: calc(100% - 70px);
+                            width: calc(100% - 50px);
                             height: auto;
 
                             @media (min-width: 650px) {
                                 width: calc(100% - 170px);
                             }
 
-                            @media (min-width: 992px) and (max-width: 1500px) {
+                            @media (min-width: 992px) and (max-width: 1900px) {
                                 width: calc(100% - 100px);
                             }
                         }
 
                         &.square-logo {
-                            height: calc(100% - 100px);
-                            width: auto;
+                            width: calc(100% - 80px);
+                            height: auto;
 
                             @media (min-width: 650px) {
-                                height: calc(100% - 170px);
+                                width: calc(100% - 200px);
+                            }
+
+                            @media (min-width: 992px) and (max-width: 1900px) {
+                                width: calc(100% - 170px);
                             }
                         }
 
@@ -336,6 +341,13 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        .featured-img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 50% 20%;
         }
     }
 
